--- a/app/Resources/views/default/subjects.html.twig
+++ b/app/Resources/views/default/subjects.html.twig
@@ -56,7 +56,7 @@
                         <li class="list-separator"></li>
                         {% for entry in entries %}
                             <li class="entry">
-                                <a href="{{ path('subject', {slug:entry.subject.slug}) }}">{{ entry.subject.title }}</a>
+                                <a href="{{ path('search', {subjects:entry.subject.id}) }}">{{ entry.subject.title }}</a>
                                 <small class="text-muted">{{ entry.aspectCount }} &bull; {{ entry.personCount }}</small>
                             </li>
                         {% endfor %}
