--- a/app/Resources/views/graph/relations.html.twig
+++ b/app/Resources/views/graph/relations.html.twig
@@ -55,7 +55,7 @@
             },
             edges: {
                 width: 0.15,
-                color: {inherit: 'from'},
+//                color: {inherit: 'from'},
                 smooth: {
                     type: 'continuous'
                 }
