--- a/app/Resources/views/static/index.html.twig
+++ b/app/Resources/views/static/index.html.twig
@@ -9,13 +9,14 @@
     </div>
     <div class="container container-narrow">
         <div class="col-xs-12">
-            <p style="margin-top: 20px;">
+            <p style="margin-top: 20px; margin-bottom: 20px;">
                 The Jesuit Science Network is a biographical database on Jesuit
                 scholars in the early modern sciences, encompassing the period
                 between the foundation of the Society of Jesus in 1540 and the
-                first few decades after its suppression in 1773. It offers
-                extensive search and display functionalities and also allows for
-                data export.
+                first few decades after its suppression in 1773.
+                {#It offers#}
+                {#extensive search and display functionalities and also allows for#}
+                {#data export.#}
             </p>
 
             {% include "include/searchbox.html.twig" %}
