--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -34,8 +34,8 @@
                     </li>
                     <li class="divider-vertical"></li>
                     <li{% if 'relations' == route %} class="active"{% endif %}><a href="{{ path('relations') }}">Relations</a></li>
-                    <li{% if 'map' == route %} class="active"{% endif %}><a href="{{ path('map') }}">Map</a></li>
-                    <li{% if 'analysis' == route %} class="active"{% endif %}><a href="#">Analysis</a></li>
+                    <li{% if 'map' == route %} class="active"{% endif %}><a href="#">Map</a></li>
+                    <li><a href="#">Statistics</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li{% if 'search' == route %} class="active"{% endif %}><a href="{{ path('search') }}">{{ icon('search') }}</a></li>
@@ -119,7 +119,7 @@
                     {% set stats = stats() %}
                     <p class="version">Version {{ stats.lm|date('m/d/Y') }}
                         &bull;
-                        {{ stats.nb }} entries in database
+                        {{ stats.nb }} persons in database
                     </p>
                 </div>
                 <div class="col-sm-6 col-sm-pull-6">
