--- a/app/Resources/views/default/detail.html.twig
+++ b/app/Resources/views/default/detail.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <style type="text/css">
-        .gm-style-iw .citation, .gm-style-iw .marker {
+        .gm-style-iw .citation, .gm-style-iw .geo {
             display: none;
         }
     </style>
