--- a/app/Resources/views/default/places.html.twig
+++ b/app/Resources/views/default/places.html.twig
@@ -55,10 +55,10 @@
                 {% for continent, countries in continents %}
                 <h3>{{ continent|format_continent }}</h3>
                 {% for country, places in countries %}
-                    <h4>{{ country|format_country }} <small class="text-muted">{{ places|length }}</small></h4>
+                    <h4>{{ country|format_country|default('Regions') }} <small class="text-muted">{{ places|length }}</small></h4>
                     <ul class="list-unstyled">
                         {% for place in places %}
-                            <li><a href="">{{ place.placeName }}</a></li>
+                            <li><a href="{{ path('search', {lat: place.latitude, lng:place.longitude,radius:0,place:place.placeName}) }}">{{ place.placeName }}</a></li>
                         {% endfor %}
                     </ul>
                 {% endfor %}
