--- a/app/Resources/views/include/searchbox.html.twig
+++ b/app/Resources/views/include/searchbox.html.twig
@@ -49,7 +49,7 @@
                 </div>
                 <div id="where-box" class="well well-small hidden" style="margin-top: 20px;">
                     Find aspects within
-                    <select name="radius">
+                    <select name="radius" id="where-radius">
                         <option value="10">10 km</option>
                         <option value="50">50 km</option>
                         <option value="100" selected>100 km</option>
