--- a/app/Resources/views/search/results-alt.html.twig
+++ b/app/Resources/views/search/results-alt.html.twig
@@ -31,7 +31,7 @@
 </div>
 
 <div id="map" style="position: absolute; top: 50px; left: 250px; right: 0; height: 300px;">
-    <button type="button" class="pull-right btn-xs btn-default btn" style="position:absolute; top: 5px; right: 5px;border: 0 none; background-color: transparent;">{{ icon('compress')}}</button>
+    <button type="button" class="pull-right btn-xs btn-default btn" style="position:absolute; top: 5px; right: 5px;border: 0 none; background-color: transparent;"><i class="fa fa-compress"></i></button>
 </div>
 
 <div style="position: absolute; top: 350px; bottom:0; right: 0; left: 200px;">
