--- a/app/Resources/views/search/results-alt2.html.twig
+++ b/app/Resources/views/search/results-alt2.html.twig
@@ -53,7 +53,7 @@
     </style>
 <div id="filter">
     <div class="panel panel-default">
-        <button type="button" class="toggle">{{ icon('double-angle-right') }}</button>
+        <button type="button" class="toggle"><i class="fa fa-double-angle-right"></i></button>
         <div class="panel-body">
             <h3>Search Results</h3>
             <p>Searching for aspects between <em>1
