--- a/app/Resources/views/search/results.html.twig
+++ b/app/Resources/views/search/results.html.twig
@@ -102,11 +102,11 @@
                 </dl>
 
                 {#<div class="text-right" style="margin-top: 20px;">#}
-                    {#<button type="button" class="btn-sm btn-default btn" style="font-family: Montserrat; font-weight: bold; letter-spacing: 0.5px; text-transform:uppercase;">Show map {{ icon('expand')}}</button>#}
+                    {#<button type="button" class="btn-sm btn-default btn" style="font-family: Montserrat; font-weight: bold; letter-spacing: 0.5px; text-transform:uppercase;">Show map <i class="fa fa-expand"></i></button>#}
                 {#</div>#}
                 {#<div class="panel panel-default" style="margin-top: 20px;position:relative;">#}
                     {#<div id="map" style="width: 100%; height: 300px;"></div>#}
-                    {#<button type="button" class="pull-right btn-xs btn-default btn" style="position:absolute; top: 5px; right: 5px;border: 0 none; background-color: transparent;">{{ icon('compress')}}</button>#}
+                    {#<button type="button" class="pull-right btn-xs btn-default btn" style="position:absolute; top: 5px; right: 5px;border: 0 none; background-color: transparent;"><i class="fa fa-compress"></i></button>#}
                 {#</div>#}
 
                 {#<p> results</p>#}
